# reinforcement-learning

./: .gitignore  README.md  README2.md  SARSA_Q-Learning_DQN.ipynb  current_requirements.txt  multiarmed_bandit_and_tabular_rl.ipynb  ppo.py  prompt.md  pyproject.toml  q_learning.ipynb  requirements.txt  utils.py
SARSA_Q-Learning_DQN/: SARSA_Q-Learning_DQN.ipynb  SARSA_Q-Learning_DQN.py
multi_armed_bandit_tabular/: multiarmed_bandit_and_tabular_rl.ipynb  multiarmed_bandit_and_tabular_rl.py
proximal_policy_optimization/: ppo.py
ref/: .gitignore
reinforcement_learning_from_human_feedback/: rlhf.py
rlhf/: rlhf.ipynb
